pstl/AutoQcmParser.py
# Generated from AutoQcm.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AutoQcmParser ( Parser ):

    grammarFileName = "AutoQcm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':question:'", "'x'", "'X'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'$'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'{'", "'}'", "'<'", "'>'", 
                     "'('", "')'", "'#'", "'_'", "':'", "','", "'~'", "'\\'", 
                     "'/'", "'='", "'''", "'*'", "'-'", "'+'", "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGIN", "END", "O_LIST_BULLET", "DIRECTIVE", "COMMENT", 
                      "ALPHABET", "NUMBERS", "DOLLAR", "DOT", "ESC_O_S_BRACKET", 
                      "ESC_C_S_BRACKET", "ESC_O_BRACKET", "ESC_C_BRACKET", 
                      "ESC_O_PAREN", "ESC_C_PAREN", "O_S_BRACKET", "C_S_BRACKET", 
                      "O_BRACKET", "C_BRACKET", "O_ANGLE", "C_ANGLE", "O_PAREN", 
                      "C_PAREN", "HASH", "UNDERSCORE", "COLON", "COMMA", 
                      "TILDE", "BACK_SLASH", "SLASH", "EQUAL", "QUOTE", 
                      "STAR", "MINUS", "PLUS", "PIPE", "WS", "LB", "ANY" ]

    RULE_document = 0
    RULE_element = 1
    RULE_headline = 2
    RULE_level = 3
    RULE_points = 4
    RULE_directive = 5
    RULE_comment = 6
    RULE_commentLineNoBreak = 7
    RULE_commentLineAtoms = 8
    RULE_listItemBullet = 9
    RULE_bulletCrossLine = 10
    RULE_bulletSimple = 11
    RULE_bullet = 12
    RULE_checkBox = 13
    RULE_isChecked = 14
    RULE_listItemEnumerated = 15
    RULE_tabular = 16
    RULE_tabularRow = 17
    RULE_tabularMixinCell = 18
    RULE_tabularCellHline = 19
    RULE_tabularCell = 20
    RULE_tabularCellContent = 21
    RULE_paragraph = 22
    RULE_paragraphNoBreak = 23
    RULE_lineNoBreak = 24
    RULE_line = 25
    RULE_lineSpecial = 26
    RULE_spanLineStartNoEmphasis = 27
    RULE_textLineStart = 28
    RULE_lineStart_fragment = 29
    RULE_text = 30
    RULE_textStart = 31
    RULE_span = 32
    RULE_text_fragment_start = 33
    RULE_text_fragment = 34
    RULE_hyperlink = 35
    RULE_url = 36
    RULE_latexEntity = 37
    RULE_brackets = 38
    RULE_latexFragment = 39
    RULE_emphCode = 40
    RULE_emphVerbatim = 41
    RULE_emphasis = 42
    RULE_keyword = 43
    RULE_indentation = 44
    RULE_rawLineContent = 45
    RULE_empty_line = 46

    ruleNames =  [ "document", "element", "headline", "level", "points", 
                   "directive", "comment", "commentLineNoBreak", "commentLineAtoms", 
                   "listItemBullet", "bulletCrossLine", "bulletSimple", 
                   "bullet", "checkBox", "isChecked", "listItemEnumerated", 
                   "tabular", "tabularRow", "tabularMixinCell", "tabularCellHline", 
                   "tabularCell", "tabularCellContent", "paragraph", "paragraphNoBreak", 
                   "lineNoBreak", "line", "lineSpecial", "spanLineStartNoEmphasis", 
                   "textLineStart", "lineStart_fragment", "text", "textStart", 
                   "span", "text_fragment_start", "text_fragment", "hyperlink", 
                   "url", "latexEntity", "brackets", "latexFragment", "emphCode", 
                   "emphVerbatim", "emphasis", "keyword", "indentation", 
                   "rawLineContent", "empty_line" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BEGIN=4
    END=5
    O_LIST_BULLET=6
    DIRECTIVE=7
    COMMENT=8
    ALPHABET=9
    NUMBERS=10
    DOLLAR=11
    DOT=12
    ESC_O_S_BRACKET=13
    ESC_C_S_BRACKET=14
    ESC_O_BRACKET=15
    ESC_C_BRACKET=16
    ESC_O_PAREN=17
    ESC_C_PAREN=18
    O_S_BRACKET=19
    C_S_BRACKET=20
    O_BRACKET=21
    C_BRACKET=22
    O_ANGLE=23
    C_ANGLE=24
    O_PAREN=25
    C_PAREN=26
    HASH=27
    UNDERSCORE=28
    COLON=29
    COMMA=30
    TILDE=31
    BACK_SLASH=32
    SLASH=33
    EQUAL=34
    QUOTE=35
    STAR=36
    MINUS=37
    PLUS=38
    PIPE=39
    WS=40
    LB=41
    ANY=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AutoQcmParser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoQcmParser.ElementContext)
            else:
                return self.getTypedRuleContext(AutoQcmParser.ElementContext,i)


        def getRuleIndex(self):
            return AutoQcmParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = AutoQcmParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 94
                    self.element()

                else:
                    raise NoViableAltException(self)
                self.state = 97 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 99
            self.match(AutoQcmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headline(self):
            return self.getTypedRuleContext(AutoQcmParser.HeadlineContext,0)


        def directive(self):
            return self.getTypedRuleContext(AutoQcmParser.DirectiveContext,0)


        def comment(self):
            return self.getTypedRuleContext(AutoQcmParser.CommentContext,0)


        def listItemBullet(self):
            return self.getTypedRuleContext(AutoQcmParser.ListItemBulletContext,0)


        def listItemEnumerated(self):
            return self.getTypedRuleContext(AutoQcmParser.ListItemEnumeratedContext,0)


        def tabular(self):
            return self.getTypedRuleContext(AutoQcmParser.TabularContext,0)


        def paragraph(self):
            return self.getTypedRuleContext(AutoQcmParser.ParagraphContext,0)


        def empty_line(self):
            return self.getTypedRuleContext(AutoQcmParser.Empty_lineContext,0)


        def getRuleIndex(self):
            return AutoQcmParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = AutoQcmParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.headline()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.directive()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.comment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.listItemBullet()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.listItemEnumerated()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.tabular()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 107
                self.paragraph()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 108
                self.empty_line()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.title = None # RawLineContentContext
            self.isQuestion = None # Token

        def LB(self):
            return self.getToken(AutoQcmParser.LB, 0)

        def level(self):
            return self.getTypedRuleContext(AutoQcmParser.LevelContext,0)


        def indentation(self):
            return self.getTypedRuleContext(AutoQcmParser.IndentationContext,0)


        def points(self):
            return self.getTypedRuleContext(AutoQcmParser.PointsContext,0)


        def rawLineContent(self):
            return self.getTypedRuleContext(AutoQcmParser.RawLineContentContext,0)


        def getRuleIndex(self):
            return AutoQcmParser.RULE_headline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeadline" ):
                listener.enterHeadline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeadline" ):
                listener.exitHeadline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeadline" ):
                return visitor.visitHeadline(self)
            else:
                return visitor.visitChildren(self)




    def headline(self):

        localctx = AutoQcmParser.HeadlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_headline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(AutoQcmParser.LB)
            self.state = 112
            self.level()
            self.state = 113
            self.indentation()
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 114
                self.points()


            self.state = 117
            localctx.title = self.rawLineContent()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutoQcmParser.T__0:
                self.state = 118
                localctx.isQuestion = self.match(AutoQcmParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LevelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(AutoQcmParser.STAR)
            else:
                return self.getToken(AutoQcmParser.STAR, i)

        def getRuleIndex(self):
            return AutoQcmParser.RULE_level

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLevel" ):
                listener.enterLevel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLevel" ):
                listener.exitLevel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLevel" ):
                return visitor.visitLevel(self)
            else:
                return visitor.visitChildren(self)




    def level(self):

        localctx = AutoQcmParser.LevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_level)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.match(AutoQcmParser.STAR)
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==AutoQcmParser.STAR):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PointsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_S_BRACKET(self):
            return self.getToken(AutoQcmParser.O_S_BRACKET, 0)

        def NUMBERS(self):
            return self.getToken(AutoQcmParser.NUMBERS, 0)

        def C_S_BRACKET(self):
            return self.getToken(AutoQcmParser.C_S_BRACKET, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(AutoQcmParser.WS)
            else:
                return self.getToken(AutoQcmParser.WS, i)

        def getRuleIndex(self):
            return AutoQcmParser.RULE_points

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoints" ):
                listener.enterPoints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoints" ):
                listener.exitPoints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoints" ):
                return visitor.visitPoints(self)
            else:
                return visitor.visitChildren(self)




    def points(self):

        localctx = AutoQcmParser.PointsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_points)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(AutoQcmParser.O_S_BRACKET)
            self.state = 127
            self.match(AutoQcmParser.NUMBERS)
            self.state = 128
            self.match(AutoQcmParser.C_S_BRACKET)
            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 129
                    self.match(AutoQcmParser.WS)

                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # KeywordContext
            self.value = None # RawLineContentContext

        def LB(self):
            return self.getToken(AutoQcmParser.LB, 0)

        def DIRECTIVE(self):
            return self.getToken(AutoQcmParser.DIRECTIVE, 0)

        def COLON(self):
            return self.getToken(AutoQcmParser.COLON, 0)

        def keyword(self):
            return self.getTypedRuleContext(AutoQcmParser.KeywordContext,0)


        def rawLineContent(self):
            return self.getTypedRuleContext(AutoQcmParser.RawLineContentContext,0)


        def indentation(self):
            return self.getTypedRuleContext(AutoQcmParser.IndentationContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(AutoQcmParser.WS)
            else:
                return self.getToken(AutoQcmParser.WS, i)

        def getRuleIndex(self):
            return AutoQcmParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = AutoQcmParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_directive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(AutoQcmParser.LB)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutoQcmParser.WS:
                self.state = 135
                self.indentation()


            self.state = 138
            self.match(AutoQcmParser.DIRECTIVE)
            self.state = 139
            localctx.name = self.keyword()
            self.state = 140
            self.match(AutoQcmParser.COLON)
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 141
                    self.match(AutoQcmParser.WS) 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 147
            localctx.value = self.rawLineContent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.content = None # CommentLineNoBreakContext

        def LB(self):
            return self.getToken(AutoQcmParser.LB, 0)

        def COMMENT(self):
            return self.getToken(AutoQcmParser.COMMENT, 0)

        def indentation(self):
            return self.getTypedRuleContext(AutoQcmParser.IndentationContext,0)


        def commentLineNoBreak(self):
            return self.getTypedRuleContext(AutoQcmParser.CommentLineNoBreakContext,0)


        def getRuleIndex(self):
            return AutoQcmParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = AutoQcmParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(AutoQcmParser.LB)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AutoQcmParser.WS:
                self.state = 150
                self.indentation()


            self.state = 153
            self.match(AutoQcmParser.COMMENT)

            self.state = 154
            localctx.content = self.commentLineNoBreak()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentLineNoBreakContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentLineAtoms(self):
            return self.getTypedRuleContext(AutoQcmParser.CommentLineAtomsContext,0)


        def getRuleIndex(self):
            return AutoQcmParser.RULE_commentLineNoBreak

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentLineNoBreak" ):
                listener.enterCommentLineNoBreak(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentLineNoBreak" ):
                listener.exitCommentLineNoBreak(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommentLineNoBreak" ):
                return visitor.visitCommentLineNoBreak(self)
            else:
                return visitor.visitChildren(self)




    def commentLineNoBreak(self):

        localctx = AutoQcmParser.CommentLineNoBreakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_commentLineNoBreak)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.commentLineAtoms()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentLineAtomsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(AutoQcmParser.LB)
            else:
                return self.getToken(AutoQcmParser.LB, i)

        def getRuleIndex(self):
            return AutoQcmParser.RULE_commentLineAtoms

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentLineAtoms" ):
                listener.enterCommentLineAtoms(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentLineAtoms" ):
                listener.exitCommentLineAtoms(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommentLineAtoms" ):
                return visitor.visitCommentLineAtoms(self)
            else:
                return visitor.visitChildren(self)




    def commentLineAtoms(self):

        localctx = AutoQcmParser.CommentLineAtomsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_commentLineAtoms)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 158
                _la = self._input.LA(1)
                if _la <= 0 or _la==AutoQcmParser.LB:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 161 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AutoQcmParser.T__0) | (1 << AutoQcmParser.T__1) | (1 << AutoQcmParser.T__2) | (1 << AutoQcmParser.BEGIN) | (1 << AutoQcmParser.END) | (1 << AutoQcmParser.O_LIST_BULLET) | (1 << AutoQcmParser.DIRECTIVE) | (1 << AutoQcmParser.COMMENT) | (1 << AutoQcmParser.ALPHABET) | (1 << AutoQcmParser.NUMBERS) | (1 << AutoQcmParser.DOLLAR) | (1 << AutoQcmParser.DOT) | (1 << AutoQcmParser.ESC_O_S_BRACKET) | (1 << AutoQcmParser.ESC_C_S_BRACKET) | (1 << AutoQcmParser.ESC_O_BRACKET) | (1 << AutoQcmParser.ESC_C_BRACKET) | (1 << AutoQcmParser.ESC_O_PAREN) | (1 << AutoQcmParser.ESC_C_PAREN) | (1 << AutoQcmParser.O_S_BRACKET) | (1 << AutoQcmParser.C_S_BRACKET) | (1 << AutoQcmParser.O_BRACKET) | (1 << AutoQcmParser.C_BRACKET) | (1 << AutoQcmParser.O_ANGLE) | (1 << AutoQcmParser.C_ANGLE) | (1 << AutoQcmParser.O_PAREN) | (1 << AutoQcmParser.C_PAREN) | (1 << AutoQcmParser.HASH) | (1 << AutoQcmParser.UNDERSCORE) | (1 << AutoQcmParser.COLON) | (1 << AutoQcmParser.COMMA) | (1 << AutoQcmParser.TILDE) | (1 << AutoQcmParser.BACK_SLASH) | (1 << AutoQcmParser.SLASH) | (1 << AutoQcmParser.EQUAL) | (1 << AutoQcmParser.QUOTE) | (1 << AutoQcmParser.STAR) | (1 << AutoQcmParser.MINUS) | (1 << AutoQcmParser.PLUS) | (1 << AutoQcmParser.PIPE) | (1 << AutoQcmParser.WS) | (1 << AutoQcmParser.ANY))) != 0)):
                    break
